@@ -1,11 +1,14 @@
 package com.hello.chatapp.service;
 
+import com.hello.chatapp.constant.SystemEventType;
+import com.hello.chatapp.constant.GroupPermission;
+import com.hello.chatapp.constant.GroupRole;
+import com.hello.chatapp.dto.GroupResponse;
 import com.hello.chatapp.dto.GroupUnreadCountDto;
 import com.hello.chatapp.entity.Group;
 import com.hello.chatapp.entity.GroupParticipant;
 import com.hello.chatapp.entity.User;
 import com.hello.chatapp.exception.BadRequestException;
-import com.hello.chatapp.exception.ForbiddenException;
 import com.hello.chatapp.exception.NotFoundException;
 import com.hello.chatapp.repository.GroupParticipantRepository;
 import com.hello.chatapp.repository.GroupRepository;
@@ -26,25 +29,33 @@ public class GroupService {
     private final GroupParticipantRepository groupParticipantRepository;
     private final UserRepository userRepository;
     private final MessageRepository messageRepository;
+    private final GroupAuthorizationService groupAuthorizationService;
+    private final SystemMessageService systemMessageService;
 
     public GroupService(GroupRepository groupRepository,
             GroupParticipantRepository groupParticipantRepository,
             UserRepository userRepository,
-            MessageRepository messageRepository) {
+            MessageRepository messageRepository,
+            GroupAuthorizationService groupAuthorizationService,
+            SystemMessageService systemMessageService) {
         this.groupRepository = groupRepository;
         this.groupParticipantRepository = groupParticipantRepository;
         this.userRepository = userRepository;
         this.messageRepository = messageRepository;
+        this.groupAuthorizationService = groupAuthorizationService;
+        this.systemMessageService = systemMessageService;
     }
 
     @Transactional
-    public Group createGroup(String name, User creator, List<Long> participantIds) {
+    public GroupResponse createGroup(String name, String description, User creator, List<Long> participantIds) {
         // Create the group
-        Group group = new Group(name, creator);
+        Group group = new Group(normalizeRequiredName(name), creator);
+        group.setDescription(normalizeDescription(description));
         group = groupRepository.save(group);
 
         // Add creator as participant
         GroupParticipant creatorParticipant = new GroupParticipant(group, creator);
+        creatorParticipant.setRole(GroupRole.LEADER);
         groupParticipantRepository.save(creatorParticipant);
 
         // Add other participants
@@ -65,46 +76,83 @@ public class GroupService {
         }
 
         // Fetch group with creator to avoid LazyInitializationException
-        return groupRepository.findByIdWithCreator(group.getId()).orElse(group);
+        Group persistedGroup = groupRepository.findByIdWithCreator(group.getId()).orElse(group);
+        return GroupResponse.fromGroup(
+                persistedGroup,
+                GroupRole.LEADER,
+                groupAuthorizationService.getPermissions(GroupRole.LEADER),
+                0L);
     }
 
     public List<User> getAllUsers() {
         return userRepository.findAll();
     }
 
-    public List<Group> getGroupsByUser(User user) {
-        List<GroupParticipant> participants = groupParticipantRepository.findByUser(user);
+    @Transactional(readOnly = true)
+    public List<GroupResponse> getUserGroups(User currentUser) {
+        List<GroupParticipant> participants = groupParticipantRepository.findByUser(currentUser);
+        Map<Long, Long> unreadCountByGroupId = getUnreadCountByGroupId(currentUser);
+        // Sidebar list: role + unread only. Permissions stay on getGroupDetails.
         return participants.stream()
-                .map(GroupParticipant::getGroup)
-                .collect(Collectors.toList());
+                .map(participant -> GroupResponse.fromParticipant(
+                        participant,
+                        unreadCountByGroupId.getOrDefault(participant.getGroup().getId(), 0L)))
+                .toList();
     }
 
-    public List<GroupParticipant> getGroupParticipantsByUser(User user) {
-        return groupParticipantRepository.findByUser(user);
-    }
-
-    public Map<Long, Long> getUnreadCountByGroupId(User user) {
-        Long userId = Objects.requireNonNull(user.getId(), "user id must not be null");
-        List<GroupUnreadCountDto> unreadRows = messageRepository.findUnreadCountRowsByUserId(userId);
-        return unreadRows.stream()
-                .collect(Collectors.toMap(GroupUnreadCountDto::getGroupId, GroupUnreadCountDto::getUnreadCount));
-    }
-
-    public long getTotalUnreadCount(User user) {
-        return getUnreadCountByGroupId(user).values().stream()
-                .mapToLong(Long::longValue)
-                .sum();
+    @Transactional(readOnly = true)
+    public GroupResponse getGroupDetails(User currentUser, Long groupId) {
+        Long safeGroupId = Objects.requireNonNull(groupId, "groupId must not be null");
+        GroupParticipant participant = groupAuthorizationService.requireMember(currentUser, safeGroupId);
+        // Detail view is opened from an already-selected chat; unread stays on the sidebar list API.
+        return GroupResponse.fromParticipant(
+                participant,
+                groupAuthorizationService.getPermissions(participant));
     }
 
     @Transactional
-    public void markGroupAsRead(User user, Long groupId, Long lastReadMessageId) {
+    public GroupResponse updateGroupDetails(User actor, Long groupId, String name, String description) {
         Long safeGroupId = Objects.requireNonNull(groupId, "groupId must not be null");
+        if (name == null && description == null) {
+            throw new BadRequestException("At least one of name or description must be provided");
+        }
 
-        Group group = groupRepository.findById(safeGroupId)
-            .orElseThrow(() -> new NotFoundException("Group with id " + safeGroupId + " not found"));
+        Group group = groupAuthorizationService.requireActivePermission(
+                actor,
+                safeGroupId,
+                GroupPermission.MANAGE_GROUP_DETAILS);
+        String originalName = group.getName();
+        String originalDescription = group.getDescription();
 
-        GroupParticipant participant = groupParticipantRepository.findByGroupAndUser(group, user)
-                .orElseThrow(() -> new ForbiddenException("You are not a member of this group"));
+        if (name != null) {
+            group.setName(normalizeRequiredName(name));
+        }
+        if (description != null) {
+            group.setDescription(normalizeDescription(description));
+        }
+
+        Group savedGroup = groupRepository.save(group);
+        if (!Objects.equals(group.getName(), originalName)) {
+            systemMessageService.recordGroupEvent(savedGroup, actor, actor, SystemEventType.GROUP_NAME_UPDATED);
+        }
+        if (!Objects.equals(group.getDescription(), originalDescription)) {
+            systemMessageService.recordGroupEvent(savedGroup, actor, actor, SystemEventType.GROUP_DESCRIPTION_UPDATED);
+        }
+        // Unread/role/permissions are unchanged; clients keep existing values (realtime fan-out: Phase 12).
+        return GroupResponse.fromGroup(savedGroup);
+    }
+
+    public Map<Long, Long> getUnreadCountByGroupId(User currentUser) {
+        Long userId = Objects.requireNonNull(currentUser.getId(), "user id must not be null");
+        List<GroupUnreadCountDto> unreadRows = messageRepository.findUnreadCountRowsByUserId(userId);
+        return unreadRows.stream()
+                .collect(Collectors.toMap(row -> row.getGroupId(), row -> row.getUnreadCount()));
+    }
+
+    @Transactional
+    public void markGroupAsRead(User actor, Long groupId, Long lastReadMessageId) {
+        Long safeGroupId = Objects.requireNonNull(groupId, "groupId must not be null");
+        GroupParticipant participant = groupAuthorizationService.requireMember(actor, safeGroupId);
 
         if (lastReadMessageId != null && !messageRepository.existsByIdAndGroup_Id(lastReadMessageId, safeGroupId)) {
             throw new BadRequestException("lastReadMessageId does not belong to this group");
@@ -113,4 +161,21 @@ public class GroupService {
         participant.setLastReadMessageId(lastReadMessageId);
         groupParticipantRepository.save(participant);
     }
+
+    private String normalizeRequiredName(String name) {
+        String normalizedName = Objects.requireNonNull(name, "name must not be null").trim();
+        if (normalizedName.isEmpty()) {
+            throw new BadRequestException("Group name is required");
+        }
+        return normalizedName;
+    }
+
+    private String normalizeDescription(String description) {
+        if (description == null) {
+            return null;
+        }
+        String normalizedDescription = description.trim();
+        return normalizedDescription.isEmpty() ? null : normalizedDescription;
+    }
+
 }
